# book

./: .gitignore  Cargo.toml  README.md  book.service
src/: crypto.rs  error.rs  html.rs  lib.rs  main.rs  model.rs  pages.rs  routes.rs  tests.rs
src/model/: error.rs  html.rs  mod.rs  res.rs  sign.rs  user.rs
src/routes/: auth.rs  edit.rs  mod.rs  upload.rs
templates/: _base.html  _base.tera  _footer.html  _footer.tera  auth.html  base.html  base.tera  edit.html  edit.tera  entry.html  error.html  error.tera  home.html  home.tera  macros.html  macros.tera  profile.html  profile.tera  sign-in.html  sign-in.tera  sign-up.html  sign-up.tera  upload.html  upload.tera  view.html  view.tera
templates/macros/: _form.tera  _listing.html  _listing.tera  _nav.html  _nav.tera  _notification.tera
