[package]
name = "book"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
hex = "0.4.3"
pulldown-cmark = "0.13.4"
redb = "4.1.0"
rkyv = "0.8.16"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tera = "1.20.1"
time = "0.3.47"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tower-http = { version = "0.6.11", features = ["compression-deflate", "compression-gzip", "compression-zstd", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
